<resources>
    <string name="mi_qr">Mi QR</string>
    <string name="qr_personal">Aqui tienes tu QR personal !</string>
    <string name="bienvenida_titulo">¡ Te damos la bienvenida</string>
    <string name="nuevo"> de nuevo !</string>
    <string name="leer_qr">Leer QR\n</string>
    <string name="escanear">Escanear QR\n</string>
    <string name="app_name">Etherium</string>
    <string name="iniciar_sesion">Entrar</string>
    <string name="entrada_registrada">Entrada registrada</string>
    <string name="e4">E4</string>
    <string name="registro_realizado_en_el_sitio">Registro realizado en el Sitio</string>
    <string name="texto_input1">Escribe una identificación</string>
    <string name="input2">Escribe tu contraseña</string>
    <string name="tipo_de_documento">tipo de documento\n</string>
    <string name="nombre_del_aprendiz">nombre del aprendiz</string>
    <string name="cargo">Cargo:</string>
    <string name="titulo_del_cargo">titulo del cargo</string>
    <string name="dos_puntos">:</string>
    <string name="num_de_documento">numero de documento</string>
    <string name="nombre">Nombre:</string>
    <string name="ic_persona">icono de persona</string>
    <string name="ic_codigoQr">icono de codigo qr\n</string>
    <string name="aprendices">Aprendices</string>
    <string name="instructores">Instructores</string>
    <string name="tlo_registro">Registro:</string>
    <string name="hora_entrada">hora de ingreso de la persona</string>
    <string name="fecha_entrada">fecha en la que ingreso persona</string>
    <string name="tlo_sitio">Sitio:</string>
    <string name="sitio_entrada">sitio en el cual la persona ingreso</string>
    <string name="entrada">sitio:</string>
    <string name="hora_salida">hora de egreso de la persona</string>
    <string name="fecha_salida">fecha de egreso dela persona</string>
    <string name="sitio_salida">sitio en el cual la persona egreso</string>
    <string name="tlo_entradas">Entradas</string>
    <string name="ic_entrada">icono de flecha hacia la izquierda indicando entrada</string>
    <string name="ic_salida">icono de flecha hacia la derecha indicando salida</string>
    <string name="tlo_salidas">Salidas</string>
    <string name="tlo_bloque">Bloque:</string>
    <string name="nombre_bloque">nombre del bloque</string>
    <string name="sitio">Sitio:</string>
    <string name="tlo_sitios">Sitios</string>
    <string name="visitantes">Visitantes</string>
</resources>