<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:backgroundTint="@color/tarjeta"
    app:cardCornerRadius="17dp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:strokeWidth="0dp"
    app:strokeColor="@android:color/transparent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tipo_identificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/texto"
        android:textSize="15sp"
        android:textStyle="bold"
        android:contentDescription="@string/tipo_de_documento"/>

        <TextView
            android:id="@+id/dos_puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/dos_puntos"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/dos_puntos" />

    <TextView
        android:id="@+id/num_identificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/texto"
        android:textSize="15sp"
        android:textStyle="bold"
        android:contentDescription="@string/num_de_documento"
        android:layout_marginStart="4dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tlo_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/nombre"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/titulo_del_cargo"
            />


        <TextView
            android:id="@+id/nombre_aprendiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/nombre_del_aprendiz"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tlo_cargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/cargo"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/titulo_del_cargo"/>

        <TextView
            android:id="@+id/cargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/cargo"
            android:layout_marginEnd="207dp"/>

        <ImageView
        android:id="@+id/eliminar_aprendiz"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/eliminar_usuario"
        android:layout_marginEnd="18dp"/>

        <ImageView
            android:id="@+id/editar_aprendiz"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/editar_usuario"/>
    </LinearLayout>

</LinearLayout>
</com.google.android.material.card.MaterialCardView>