<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo">


    <ImageView
        android:id="@+id/icono_qr"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/qr"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/icono"
        android:contentDescription="@string/ic_codigoQr"/>

    <TextView
        android:id="@+id/Tlo_miqr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@id/icono_qr"
        android:layout_marginStart="20dp"
        android:text="@string/mi_qr"
        android:textSize="28sp"
        android:textColor="@color/texto"/>

    <View
        android:id="@+id/barra"
        android:layout_width="350dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:background="@color/texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tarjeta_qr"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barra"
        app:layout_constraintBottom_toTopOf="@id/tarjeta_navegacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="30dp" android:layout_marginBottom="30dp"
        app:cardCornerRadius="18dp"
        app:cardBackgroundColor="@color/tarjeta"
        app:strokeColor="@color/tarjeta" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
            android:id="@+id/bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida_titulo"
            android:textColor="@color/texto"
            android:textSize="28sp"
            android:textStyle="bold"
            />

            <TextView
                android:id="@+id/nuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevo"
                android:textColor="@color/texto"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:id="@+id/txt_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_personal"
                android:textColor="@color/texto"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                />

            <ImageView
                android:id="@+id/codigo_qr"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:scaleType="fitCenter" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tarjeta_navegacion"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/tarjeta"
        app:strokeColor="@color/tarjeta"
        android:layout_marginBottom="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_leer_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leer_qr"
        android:textSize="15sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/texto"
        app:icon="@drawable/ic_scanner"
        app:iconGravity="textEnd"
        app:iconTint="@color/texto"
        app:backgroundTint="@color/icono"
        app:iconSize="28dp"
        app:iconPadding="30dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toTopOf="@id/tarjeta_navegacion"
        app:layout_constraintBottom_toBottomOf="@id/tarjeta_navegacion"
        app:layout_constraintStart_toStartOf="@id/tarjeta_navegacion"
        app:layout_constraintEnd_toEndOf="@id/tarjeta_navegacion"/>



</androidx.constraintlayout.widget.ConstraintLayout>