<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F2050A1A"
    android:id="@+id/main">


    <ImageView
        android:id="@+id/logoImagen"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textoInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar sesión"
        android:textColor="#F5F5F5"
        app:layout_constraintTop_toBottomOf="@id/logoImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:textSize="45sp"
        android:fontFamily="@font/poppins_extra_bold"
        android:textAlignment="center"
        />


    <TextView
        android:id="@+id/descripcion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Acceso con facilidad y seguridad al edificio"
        android:textAlignment="center"
        android:textColor="#80F5F5F5"
        app:layout_constraintTop_toBottomOf="@id/textoInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textoInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Numero de identificación"
        app:layout_constraintTop_toBottomOf="@id/descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="#CCF5F5F5"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/poppins_medium"
        />

    <EditText
        android:id="@+id/inputNumeroIdentificacion"
        android:layout_width="325dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/textoInput1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/texto_input1"
        android:textColorHint="#60F5F5F5"
        android:padding="12dp"
        android:background="@drawable/inputs_campos"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        android:textColor="#D9F5F5F5"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/textoInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#CCF5F5F5"
        android:text="Contraseña"
        app:layout_constraintTop_toBottomOf="@id/inputNumeroIdentificacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="220dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        />

    <EditText
        android:id="@+id/inputContraseña"
        android:layout_width="325dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/textoInput2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/input2"
        android:textColorHint="#60F5F5F5"
        android:background="@drawable/inputs_campos"
        android:padding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        android:textColor="#D9F5F5F5"
        android:inputType="textPassword"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonIniciar"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:text="@string/iniciar_sesion"
        app:cornerRadius="15dp"
        android:backgroundTint="#117CF4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputContraseña"
        android:layout_marginTop="70dp"
        android:textColor="@color/texto"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="16sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>